<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fbfffc"
    >

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/welcome"
        android:textColor="#bdbdbd"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/app_user"
        android:textColor="#607d8b"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/userprofile"
        android:id="@+id/userprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:layout_width="252dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/search_bar"
        android:background="@drawable/rounded_searchbar"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_text"
        app:defaultQueryHint="@string/default_query" />
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/all"
        android:id="@+id/all"
        android:textSize="16dp"
        android:textColor="#78909c"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar" />

    <TextView
        android:id="@+id/fruit"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:text="@string/fruit"
        android:textSize="16dp"
        android:textColor="#78909c"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/all"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar" />

    <TextView
        android:id="@+id/vegetables"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="16dp"
        android:text="@string/vegetables"
        android:textSize="16dp"
        android:textColor="#78909c"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/fruit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar" />

    <TextView
        android:id="@+id/meat"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="16dp"
        android:text="@string/meat"
        android:textSize="16dp"
        android:textColor="#78909c"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/vegetables"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar" />

    <TextView
        android:id="@+id/diary"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="344dp"
        android:layout_marginTop="16dp"
        android:text="@string/dairy"
        android:textSize="16dp"
        android:textColor="#78909c"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/meat"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar" />
<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    app:layout_constraintBottom_toBottomOf="@+id/all"
    android:id="@+id/intersection"
    android:layout_marginTop="8dp"/>

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="1024dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/intersection"
        />


</androidx.constraintlayout.widget.ConstraintLayout>