<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.cardview.widget.CardView
    android:layout_width="152dp"
    android:layout_height="192dp"
    android:background="#FFFFFF"
    android:layout_margin="8dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:layout_marginTop="16dp"
        android:id="@+id/item1"
        android:src="@drawable/orange"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameOfProduct"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:text="@string/fruit_dummy_name"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item1"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="8dp"
         />
    <TextView
        android:id="@+id/categoryOfProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_fruit_category"
        android:textColor="@color/grey"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameOfProduct"
        tools:layout_editor_absoluteX="16dp"

        />
    <TextView
        android:id="@+id/priceOfProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_price_of_fruit"
        android:textColor="@color/sea_green"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryOfProduct"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="8dp"
        />
    <ImageView
        android:id="@+id/add_to_cart"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/add_item"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameOfProduct" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>